feat: Enhance navigation and movie data handling with new filtering and loading functions

--- a/views/watchlist.html
+++ b/views/watchlist.html
@@ -9,7 +9,7 @@
 <body>
     
     <nav>
-        <img class="logo" src="../assets/images/film_logo.png" alt="MovieFinder Logo">
+        <a href="/index.html"><img class="logo" src="../assets/images/film_logo.png" alt="MovieFinder Logo"></a>
         <a href="/index.html">Home</a>
     </nav>
 
