--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav {
     
 }
 
-nav a {
+nav a:not(:has(.logo)) {
     text-decoration: none;
     color: #333;
     padding: 10px 15px;
@@ -46,8 +46,14 @@ nav a {
 .logo {
     max-width: 80px;
     max-height: 80px;
-    margin-left: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #a4e5d9;
     object-fit: contain;
+}
+
+.logo:hover {
+    background-color: #88c8bc;
 }
 
 .header-image {
@@ -68,7 +74,7 @@ header {
 
 nav a:hover, button:hover {
 
-    background-color: lightgray;
+    background-color: #88c8bc;
 }
 
 button:focus, 
