--- a/css/style.css
+++ b/css/style.css
@@ -249,9 +249,46 @@ button {
 }
 
 .movie-count {
-    text-align: left;
+    display: flex;
+    align-items: start;
+    gap: 20px;
     margin: 0 auto 20px auto;
     max-width: 80%;
     font-size: 18px;
     color: #333;
+}
+
+
+
+button.in-watchlist {
+    background-color: #ff9800; /* Orange color matching warning toast */
+    color: #333;
+    cursor: default;
+}
+
+button.in-watchlist:hover {
+    background-color: #c38b37; /* Darker green on hover */
+}
+
+.empty-watchlist {
+    text-align: center;
+    font-size: 20px;
+    color: #555;
+    margin-top: 50px;
+}
+
+.runtime-filters {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+
+}
+
+.runtime-input{
+    max-width: 160px;
+}
+
+.runtime-buttons {
+    min-width: 180px;
 }
