--- a/views/watchlist.html
+++ b/views/watchlist.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+
     <title>Watchlist</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/streamingServicesStyle.css"/>
